Ajuste no layout

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Aluracord - Matrix (peas)",
+    "name": "Future Dixcord - new experience 🚀",
     "theme": {
         "colors": {
             "primary": {
