--- a/config.json
+++ b/config.json
@@ -3,30 +3,29 @@
     "theme": {
         "colors": {
             "primary": {
-                "050": "#E3F9E5",
-                "100": "#C1EAC5",
-                "200": "#A3D9A5",
-                "300": "#7BC47F",
-                "400": "#57AE5B",
-                "500": "red",
-                "600": "#2F8132",
-                "700": "#207227",
-                "800": "#0E5814",
-                "900": "#05400A"
+                "050": "#DB3A34",
+                "100": "#CF3834",
+                "200": "#C23635",
+                "300": "#B63435",
+                "400": "#A93235",
+                "500": "#9D2F36",
+                "600": "#902D36",
+                "700": "#842B36",
+                "800": "#772937",
+                "900": "#6B2737"
             },
             "neutrals": {
                 "000": "#FFFFFF",
-                "050": "#F5F7FA",
-                "100": "#E4E7EB",
-                "200": "#CBD2D9",
-                "300": "#9AA5B1",
-                "400": "#52667A",
-                "500": "#313D49",
-                "600": "#29333D",
-                "700": "#212931",
-                "800": "#181F25",
-                "900": "#101418",
-                "999": "#080A0C"
+                "050": "#E8E8E8",
+                "100": "#D2D2D2",
+                "200": "#BBBBBB",
+                "300": "#A5A5A5",
+                "400": "#8E8E8E",
+                "600": "#777777",
+                "700": "#616161",
+                "800": "#4A4A4A",
+                "900": "#343434",
+                "999": "#1D1D1D"
             }
         }
     },
